# dw-benchmarks

./: .gitignore  README.md  pyproject.toml
dw_benchmark/ddl/redshift_ddls/: redshift_utils.py
dw_benchmark/ddl/shared/: models.py  utils.py
dw_benchmark/templates/: not_optimized.sql  optimized.sql  warmup.sql
queries/: query1.sql  query10.sql  query11.sql  query12.sql  query13.sql  query14.sql  query15.sql  query16.sql  query17.sql  query18.sql  query19.sql  query2.sql  query20.sql  query21.sql  query22.sql  query23.sql  query24.sql  query25.sql  query26.sql  query27.sql  query28.sql  query29.sql  query3.sql  query30.sql  query31.sql  query32.sql  query33.sql  query34.sql  query35.sql  query36.sql  query37.sql  query38.sql  query39.sql  query4.sql  query40.sql  query41.sql  query42.sql  query43.sql  query44.sql  query45.sql  (+59 more)
redshift-experiments/: optimized_vs_unoptimized.py
