[tool.poetry]
name = "dw-benchmark"
version = "0.1.0"
description = "Benchmark utility and reporting for Data Warehouse tools"
authors = ["Stas Sajin <sajin.stanislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "1.3.3"
psycopg2-binary = "2.8.2"
pydantic = "1.3"

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
filter_files = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
